--- a/v2/assets/css/main.css
+++ b/v2/assets/css/main.css
@@ -13,7 +13,7 @@ div#game-controls {
     height: 60px;
     display: flex;
     flex-direction: row;
-    background-color: orange;
+    background-color: #555555;
     /* border: 2px solid black; */
     margin: 0 auto;
 }
@@ -25,10 +25,12 @@ div#difficulty-container, div#info-container {
 
 div#difficulty-container {
     justify-content: left;
+    padding-left: 1rem;
 }
 
 div#info-container {
     justify-content: right;
+    padding-right: 1rem;
 }
 
 div#game-board {
@@ -67,37 +69,78 @@ div#game-board {
 /* Utility Classes - Game board */
 .board-square {
     /* border: 1px solid black; */
-    background-color: grey;
+    background-color: #787878;
+    text-align: center;
+    cursor: pointer;
 }
 .board-square-alt {
-    background-color: lightgray;
+    background-color: #888888;
+    text-align: center;
+    cursor: pointer;
 }
 
 .board-square:hover {
-    background-color: rgba(0, 0, 100, 0.3);
+    background-color: #c0c0c0;
 }
 
 .board-square-alt:hover {
-    background-color: rgba(0, 0, 100, 0.3);
+    background-color: #c0c0c0;
 }
 
 
 .easy-square {
     width: 60px;
     height: 60px;
+    line-height: 60px;
+    font-size: 1.5rem;
 }
 
 .medium-square {
     width: 40px;
     height: 40px;
+    line-height: 40px;
 }
 
 .hard-square {
     width: 35px;
     height: 35px;
+    line-height: 35px;
 }
 
 .spacer-square {
     display: flex;
     flex-basis: 100%;
+}
+
+.revealed {
+    background-color: #c0c0c0;
+}
+
+.flagged {
+    color: red;
+}
+
+.color-1 {
+    color: blue;
+}
+.color-2 {
+    color: green;
+}
+.color-3 {
+    color: red;
+}
+.color-4 {
+    color: purple;
+}
+.color-5 {
+    color: maroon;
+}
+.color-6 {
+    color: turquoise;
+}
+.color-7 {
+    color: black;
+}
+.color-8 {
+    color: gray;
 }
